--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+== Version 2.1.0: Released Apr 29 2025 ==
+
+* Dropped support for PHP <=7.3
+
 == Version 2.0.1: Released Jul 09 2020 ==
 
 * Added support for PHP 8
